fixed ugly matrix sizes, but now grid is not the same size as matrix so they don't align.  This will require a better fix

--- a/LiquiZ2/WebContent/assets/css/demostyle.css
+++ b/LiquiZ2/WebContent/assets/css/demostyle.css
@@ -119,14 +119,22 @@ text-align: center;
     border: 1 solid #000;
 }
 
-.matrix,
 table {
     font: 10pt Courier, fixed;
     background-color: #DEE4E6;
     /*display: inline-block;*/
     border: 1px solid black;
     border-collapse: collapse;
-    width: 700px;
+//    width: 700px;
+}
+
+.matrix {
+    font: 10pt Courier, fixed;
+    background-color: #DEE4E6;
+    /*display: inline-block;*/
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 100px;
 }
 
 td,
@@ -136,7 +144,7 @@ th {
 
 .matrix td {
     border: 1px solid black;
-    width: 50px;
+    //width: 30px;
     margin: 1px;
     /*padding: 2px;*/
     background-color: #aaa;
